data & Welcome Page

--- a/sneakers/app/views/welcome/index.html.erb
+++ b/sneakers/app/views/welcome/index.html.erb
@@ -1,3 +1,8 @@
+<header class="hero">
+  <h1>This is heaven</h1>
+</header>
+
+
 <h1>Welcome To My Sneaker Website!</h1>
 <h4> Learn so much about sneakers, their history and their trendy impact on society, plus get to know some famous sneakerheads and youtubers!</h4>
 
@@ -32,4 +37,19 @@
       enjoy surfing this website and finding out some interesting information about sneakers and my exact taste, and
       also learning about my favorite sneaker dudes/idols who I absolutely admire. </h4>
 
-      <div id="footer"> <h5> Copyright 2016 </h5> </div>
+      <footer class="footer">
+        <div class="row">
+          <div class="small-12 columns">
+            <p class="slogan">Finger-lickin' good</p>
+            <p class="links">
+              <a href="#">Home</a>
+              <a href="#">Blog</a>
+              <a href="#">Pricing</a>
+              <a href="#">About</a>
+              <a href="#">Faq</a>
+              <a href="#">Contact</a>
+            </p>
+            <p class="copywrite">Copywrite not copypwrite © 2015</p>
+          </div>
+        </div>
+      </footer>
